Modified index title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="author" content="Mani">
         <meta name="description" content="Welcome Mk development page">
-        <title>First page</title>
+        <title>Last page</title>
         <link rel="icon" href="images/200850.jpg" type="image/jpg">
           <link rel="stylesheet" href="main.css" type="text/css">
     </head>
