Changed Contacts title into contact

--- a/practicehtml.html
+++ b/practicehtml.html
@@ -19,7 +19,7 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <a href="#sk">Skills</a>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="#con">Contacts</a>
+                    <a href="#con">Contact</a>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <a href="#edu">Education</a>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
