Changed Skills into skill

--- a/practicehtml.html
+++ b/practicehtml.html
@@ -17,7 +17,7 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <a href="#obj">Objective</a>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="#sk">Skills</a>
+                    <a href="#sk">Skill</a>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <a href="#con">Contact</a>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
