created basic form with label,text and password input

--- a/practicehtml.html
+++ b/practicehtml.html
@@ -25,6 +25,8 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <a href="#pro">Project</a>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a href="#cntme">Contact me</a>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
                 </p>
             </nav>
@@ -86,7 +88,7 @@
                     <a href="https://github.com/Manikandan1428">github</a>
                     <br>
                 </h6>
-                <address style="font-size: 16px; padding-left: 40px;" >Bangalore,India.</address>
+                <address>Bangalore,India.</address>
             </section>
 
             <hr>
@@ -188,6 +190,25 @@
                 </table>
                 <hr>
             </section>
+            <article id="cntme">
+                <h5>Contact Me</h5>
+                <p>Please fill your query</p>
+                <form action="https://httpbin.org/get",method="get">
+                    <p>
+                        <label for="firstName">First Name</label>
+                        <input type="text" name="firstName" id="firstName" placeholder="Enter your first Name" autocomplete="on" required >                        
+                    </p>
+                    <p>
+                        <label for="lastName">Last Name</label>
+                        <input type="text" name="lastName" id="lastName" placeholder="Enter your last name" autocomplete="on" autofocus required>
+                    </p>
+                    <p>
+                        <label for="passWord">Password</label>
+                        <input type="password" name="passWord" id="passWord" placeholder="Minimum 8 characters" required>
+                    </p>
+                </form>
+            </article>
+            <hr>
         </main>
         <footer>
             <aside>
