Added submit and reset button to the form

--- a/practicehtml.html
+++ b/practicehtml.html
@@ -291,6 +291,8 @@
                             <textarea name="message" id="message" cols="30" rows="10">Your Message</textarea>
                         </p>
                     </fieldset>
+                    <button type="submit">Submit</button>
+                    <button type="reset">Reset</button>
                     
                 </form>
             </article>
