Added navigation to hours html page head portion

--- a/tacoStoreHours.html
+++ b/tacoStoreHours.html
@@ -1,5 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta charset="UTF-8">
-    <title>LTS Hours</title>
+    <head>
+        <meta charset="UTF-8">
+        <title>LTS Hours</title>
+        <link rel="stylesheet" href="taco.css">     
+    </head>
+    <body>
+        <header>
+            <h1>The Little taco Shop Hours</h1>
+            <nav aria-label="primary navigation">
+                <ul>
+                    <li><a href="projectHTaco.html">Home</a></li>
+                    <li><a href="projectHTaco.html#abt">About LTS</a></li>
+                    <li><a href="projectHTaco.html#menu">Our Menu</a></li>
+                    <li><a href=""></a>Contact Us</li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+
+        </main>
+        <footer>
+
+        </footer>
+    </body>
 </html>
