--- a/projectHTaco.html
+++ b/projectHTaco.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="author" content="Mani">
+        <meta name="description" content="The official website for Little Taco Shop">
         <title>The Little Taco Shop</title>
         <link rel="stylesheet" href="taco.css">
 
@@ -99,6 +101,8 @@
         <br>
         <footer>
             <a href="#" id="top">Back To Top</a>
+            <hr>
+            <p>Copyrights &copy; &gt;&gt;&gt;&gt;&gt;&gt; @ The Little Taco Shop &lt;&lt;&lt;&lt;&lt;&lt;</p>
         </footer>
     </body>
 </html>
