done contactTaco page

--- a/tacoStoreHours.html
+++ b/tacoStoreHours.html
@@ -15,7 +15,7 @@
                     <li><a href="projectHTaco.html">Home</a></li>
                     <li><a href="projectHTaco.html#abt">About LTS</a></li>
                     <li><a href="projectHTaco.html#menu">Our Menu</a></li>
-                    <li><a href="contactTaco.html"></a>Contact Us</li>
+                    <li><a href="contactTaco.html#contact">Contact Us</a></li>
                 </ul>
             </nav>
             <figure>
