--- a/contactTaco.html
+++ b/contactTaco.html
@@ -9,13 +9,62 @@
     </head>
     <body>
         <header>
-
+            <h1>Contact Us</h1>
+            <nav aria-label="primary navigation">
+                <ul>
+                    <li><a href="projectHTaco.html">Home</a></li>
+                    <li><a href="projectHTaco.html#abt">About LTS</a></li>
+                    <li><a href="projectHTaco.html#menu">Our Menu</a></li>
+                    <li><a href="tacoStoreHours.html#hours">Store Hours</a></li>
+                </ul>
+            </nav>
+            <figure>
+                <img src="images/contactTacoImg.jpg" alt="Taco Image" width="450" height="300" loading="lazy">
+                <figcaption>Little Taco Shop Tacos</figcaption>
+            </figure>
         </header>
+        <hr>
         <main>
-
+            <section id="contact">
+                <h2>Our Contact Form</h2>
+                <form action="https://httpbin.org/post" method="post">
+                    <fieldset>
+                        <legend>Send Us A Messege</legend>
+                        <p>
+                            <label for="name">Name</label>
+                            <input type="text" name="name" id="name" placeholder="Enter Your name" autocomplete="on" required>
+                        </p>
+                        
+                        <p>
+                            <label for="email">Email</label>
+                            <input type="email" name="email" id="email" placeholder="Enter your Email" autocomplete="on" required>
+                        </p>
+                        <p>
+                            <label for="message">Your Message:</label>
+                            <br>
+                            <textarea name="message" id="message" cols="30" rows="10" placeholder="Type Your Message Here"></textarea>
+                        </p>
+                    </fieldset>
+                    <button type="submit">Submit</button>
+                    <button type="reset">Reset</button>
+                </form>
+            </section>
+            <section>
+                <h2>Our Location</h2>
+                <address>
+                    555 Taco Temptation Lane, Suite T
+                    <br> 
+                    Kansas City, MO 55555-5555 
+                    <br><br>
+                    Phone: <a href="tel:+919940202181">994-0202-181</a>
+                </address>
+                <br>
+            </section>
         </main>
         <footer>
-
+            <a href="#" id="top">Back To Top</a>
+            <hr>
+            <p>Copyrights &copy; &gt;&gt;&gt;&gt;&gt;&gt; @ The Little Taco Shop &lt;&lt;&lt;&lt;&lt;&lt;</p>
         </footer>
     </body>
 </html>
