completed LTS Project

--- a/practicehtml.html
+++ b/practicehtml.html
@@ -202,7 +202,7 @@
                         </p>
                         <p>
                             <label for="lastName">Last Name</label>
-                            <input type="text" name="lastName" id="lastName" placeholder="Enter your last name" autocomplete="on" autofocus required>
+                            <input type="text" name="lastName" id="lastName" placeholder="Enter your last name" autocomplete="on" required>
                         </p>
                         <p>
                             <label for="mobileNumber">Mobile Number</label>
@@ -218,7 +218,7 @@
                         </p>
                         <p>
                             <label for="language">Fav Language</label>
-                            <select name="content" id="language" multiple size="5"> 
+                            <select name="content" id="language" multiple size="2"> 
                                 <optgroup label="Evergreen">
                                 <option value="Java" >Java</option>
                                 <option value="C">C</option>
