--- a/projectHTaco.html
+++ b/projectHTaco.html
@@ -16,7 +16,7 @@
                     <li><a href="#abt">About LTS</a></li>
                     <li><a href="#menu">Our Menu</a></li>
                     <li><a href="tacoStoreHours.html">Store Hours</a></li>
-                    <li><a href="cnt">Contact Us</a></li>
+                    <li><a href="contactTaco.html#connect">Contact Us</a></li>
                 </ul>
                 
             </nav>
@@ -30,8 +30,8 @@
         </header>
         <main>
             <article>
+                <h2>About <abbr title="Little Taco Shop">LTS</abbr></h2>
                 <section id="abt">
-                    <h2>About <abbr title="Little Taco Shop">LTS</abbr></h2>
                     <p>
                         <abbr title="Little Taco Shop">LTS</abbr> was founded in 2022. Our shop was built from a <strong>love of tacos.</strong> We hope our shop  adds a unique and interesting place to our little town.
                     </p>
@@ -54,8 +54,8 @@
                 <section id="menu">
                     <h2>Our Menu</h2>
                     <table>
+                        <caption>Our Tacos</caption>
                         <thead>
-                            <caption>Our Tacos</caption>
                             <tr>
                                 <th scope="col">Tacos</th>
                                 <th scope="col">Qty</th>
@@ -85,8 +85,10 @@
                                 <td>2</td>
                                 <td>$3.50</td>
                             </tr>
-                            <td>3</td>
-                            <td>$4.50</td>
+                            <tr>
+                                <td>3</td>
+                                <td>$4.50</td>
+                            </tr>
                             
                         </tbody>
                         <tfoot>
